change liquibase, refractoring (#16)
* [HOTFIX] Change password length

* change structure and refactoring

---------

Co-authored-by: AleksandrMikhalevich <aleksandr.mikhalevich89@gmail.com>
Co-authored-by: Maksim Silevich <maks.silevich@gmail.com>